testdata/baselines/reference/compiler/nodeNextPackageSelfNameExportsEqualsDeclarationDir.errors.txt
error TS5055: Cannot write file '/dist/main.d.cts' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
/main.cts(1,20): error TS2307: Cannot find module 'self' or its corresponding type declarations.


!!! error TS5055: Cannot write file '/dist/main.d.cts' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== /dist/main.d.cts (0 errors) ====
    export {};
==== /main.cts (1 errors) ====
    import * as s from "self";
                       ~~~~~~
!!! error TS2307: Cannot find module 'self' or its corresponding type declarations.
    s;
==== /package.json (0 errors) ====
    {
      "name": "self",
      "exports": {
        ".": "./dist"
      }
    }
    